Fixed overflow issue when displaying big code blocks

--- a/src/app/blog/blog-page/blog-page.component.scss
+++ b/src/app/blog/blog-page/blog-page.component.scss
@@ -8,7 +8,7 @@ section {
     display: grid;
 
     grid-template-rows: auto;
-    grid-template-columns: auto;
+    grid-template-columns: 100%; 
 
     grid-template-areas:
         "blog-item-banner"
@@ -77,6 +77,8 @@ section {
         min-height: 50vh;
         line-height: 2em;
         letter-spacing: 0.75px;
+        max-width: 100%;
+
 
         background-image: url(../../../assets/images/header-banner-footer.svg);
         background-repeat: no-repeat;
@@ -85,6 +87,21 @@ section {
         background-size: cover;
         padding: 0 10% 250px 10%;
         margin: 0;
+
+
     }
 
+}
+
+// Markdown code blocks
+:host ::ng-deep {
+
+    pre {
+        margin: 35px 0;
+        padding: 35px;
+        border: 1px solid $tofu-primary;
+        box-shadow: 0px 0 25px $tofu-primary;
+        border-radius: 1%;
+        overflow: auto;
+    }
 }
