--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,10 @@ html {
     color: $base-font-color;
 }
 
+html, body {
+    width: 100%;
+}
+
 * {
     box-sizing: border-box;
 }
